--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,8 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
+        <script src="scripts/controllers/facebook.js"></script>
+
     <!-- endbuild -->
   </body>
 </html>
