creacion de pagina de productos

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
         <script src="scripts/controllers/facebook.js"></script>
+        <script type="text/javascript" src="scripts/controllers/products.js"></script>
 
     <!-- endbuild -->
   </body>
