--- a/app/index.html
+++ b/app/index.html
@@ -52,12 +52,13 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/controllers/addProducts.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
     <script src="scripts/controllers/facebook.js"></script>
-    <script type="text/javascript" src="scripts/controllers/products.js"></script>
-
+    <script src="scripts/controllers/products.js"></script>
+    <script src="scripts/controllers/miPerfil.js"></script>
     <!-- endbuild -->
   </body>
 </html>
