--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
     <script src="scripts/controllers/miPerfil.js"></script>
     <script src="scripts/controllers/addProducts.js"></script>
     <script src="scripts/controllers/publishProducts.js"></script>
+    <script src="scripts/controllers/editProducts.js"></script>
+    <script src="scripts/services/productsServices.js"></script>
     <!-- endbuild -->
   </body>
 </html>
