--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
     <script src="../bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="../bower_components/ui-router/release/angular-ui-router.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
+    <script src="../bower_components/angular-smart-table/dist/smart-table.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
